kidney food completed

--- a/healthyFood.html
+++ b/healthyFood.html
@@ -1261,12 +1261,17 @@ Kale can be made into snack chips. First wash the leaves, then tear them into sm
 								<div class="col-sm-6 col-md-4">
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/egg.jpg" alt="...">
-										<h3>EGG</h3>
+										<img src="images/healthy/cauliflower.jpg" alt="...">
+										<h3>Cauliflower</h3>
 									</a>
 											<div class="caption">
-												<p> Eggs are a great food to eat for eye health. The yolks contain vitamin A, lutein, zeaxanthin, and zinc, which are all vital to eye health. Vitamin A safeguards the cornea. The cornea is the surface of the eye. Lutein and zeaxanthin lower the chance Trusted Source of getting serious eye conditions like age-related macular degeneration and cataracts. Zinc contributes to the health of the retina. The retina is the back of the eye. Zinc also helps eyes see at night.
-Eggs are extremely versatile and can work for breakfast, lunch, and dinner. A simple way to enjoy eggs is by hard-boiling them. Try them in salads and sandwiches. You can even eat a hardboiled egg for a snack.
+												<p>Cauliflower is a nutritious vegetable that’s a good source of many nutrients, including vitamin C, vitamin K, and the B vitamin folate.
+It’s also full of anti-inflammatory compounds like indoles and is an excellent source of fiber.
+Plus, mashed cauliflower can be used in place of potatoes for a low potassium side dish.
+One cup (124 grams) of cooked cauliflower contains:
+•	sodium: 19 mg
+•	potassium: 176 mg
+•	phosphorus: 40 mg
 
 </p>
 												<p>
@@ -1284,12 +1289,17 @@ Eggs are extremely versatile and can work for breakfast, lunch, and dinner. A si
 								<div class="col-sm-6 col-md-4">
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/almonds.jpg" alt="...">
-										<h3>ALMOND</h3>
+										<img src="images/healthy/blueberries.jpg" alt="...">
+										<h3>BLUEBERRY</h3>
 									</a>
 											<div class="caption">
-												<p>Almonds, like other nuts and seeds, are generally good for eye health. Almonds contain vitamin E. This vitamin guards against unstable molecules that target healthy tissue. Consuming regular amounts of vitamin E can help prevent age-related macular degeneration as well as cataracts. You should aim for about 22 international units (IU), or 15 mg of vitamin E a day. One serving of almonds is about 23 nuts, or ¼ cup, and has 11 IU. Other nuts and seeds that contain vitamin E include sunflower seeds, hazelnuts, and peanuts.
-You can enjoy almonds as a snack at any time. They are also tasty in your breakfast cereal, yogurt, or in salads. Just remember to keep an eye on serving size. Almonds are high in calories, so try to limit your intake to one to two servings a day.
+												<p>Blueberries are packed with nutrients and one of the best sources of antioxidants you can eat.
+In particular, these sweet berries contain antioxidants called anthocyanins, which may protect against heart disease, certain cancers, cognitive decline, and diabetes.
+They also make a fantastic addition to a kidney-friendly diet, as they are low in sodium, phosphorus, and potassium.
+One cup (148 grams) of fresh blueberries contains (21):
+•	sodium: 1.5 mg
+•	potassium: 114 mg
+•	phosphorus: 18 mg
 </p>
 <p>
 													<a href="#" class="btn btn-default btn-transparent" role="button">
@@ -1306,13 +1316,18 @@ You can enjoy almonds as a snack at any time. They are also tasty in your breakf
 								<div class="col-sm-6 col-md-4">
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/fish.jpg" alt="...">
-										<h3>FISH</h3>
+										<img src="images/healthy/sea bass.jpg" alt="...">
+										<h3>SEA BASS</h3>
 									</a>
 											<div class="caption">
-												<p> Fish, particularly salmon, can be a great food to consume for eye health. Salmon and other fish have omega-3 fatty acids. These are “healthy” fats. Omega-3 fatty acids can contribute to visual development and the health of the retina in the back of the eye. They can also help prevent dry eyes.
-Consider incorporating fish into your meal plan a few days a week. When buying salmon, choose a wild-caught version instead of farm-raised salmon. That’s because farm-raised salmon has more saturated fat Trusted Source and less omega-3s than wild-caught salmon.
-Salmon, and most fish, can be grilled or broiled. Try seasoning it with fresh herbs, lemons, and salt and pepper for a simple and delicious dinner.
+												<p> Sea bass is a high quality protein that contains incredibly healthy fats called omega-3s.
+Omega-3s help reduce inflammation and may help decrease the risk of cognitive decline, depression, and anxiety.
+While all fish are high in phosphorus, sea bass contains lower amounts than other seafood.
+However, it’s important to consume small portions to keep your phosphorus levels in check.
+Three ounces (85 grams) of cooked sea bass contain:
+•	sodium: 74 mg
+•	potassium: 279 mg
+•	phosphorus: 211 mg
 
 </p>
 												<p>
@@ -1330,12 +1345,17 @@ Salmon, and most fish, can be grilled or broiled. Try seasoning it with fresh he
 							<div class="col-sm-6 col-md-4">
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/dairy.jpg" alt="...">
-										<h3>DAIRY</h3>
+										<img src="images/healthy/redgrapes.jpg" alt="...">
+										<h3>RED GRAPES</h3>
 									</a>
 											<div class="caption">
-												<p> Dairy products such as milk and yogurt can be good for the eyes. They contain vitamin A as well as the mineral zinc. Vitamin A protects the cornea while zinc helps bring that vitamin to the eyes from the liver. Zinc is found throughout the eye, especially the retina and choroid, which is the vascular tissue that lies under the retina. This important mineral helps with night vision as well as the prevention of cataracts. Dairy from grass-fed cows provides the most benefits.
-Dairy can be consumed throughout your day. You can drink a glass with a meal or enjoy it in coffee and tea, or breakfast cereal. Yogurt is a healthy option for breakfast or as a snack.
+												<p>Red grapes are not only delicious but also deliver a ton of nutrition in a small package.
+They’re high in vitamin C and contain antioxidants called flavonoids, which have been shown to reduce inflammation.
+Additionally, red grapes are high in resveratrol, a type of flavonoid that has been shown to benefit heart health and protect against diabetes and cognitive decline.
+These sweet fruits are kidney-friendly, with a half cup (75 grams) containing (29):
+•	sodium: 1.5 mg
+•	potassium: 144 mg
+•	phosphorus: 15 mg
 </p>
 												<p>
 													<a href="#" class="btn btn-default btn-transparent" role="button">
@@ -1351,12 +1371,17 @@ Dairy can be consumed throughout your day. You can drink a glass with a meal or 
 							<div class="col-sm-6 col-md-4">
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/carrots.jpg" alt="...">
-										<h3>Carrot</h3>
+										<img src="images/healthy/egg whites.jpg" alt="...">
+										<h3>EGG WHITES</h3>
 									</a>
 											<div class="caption">
-												<p>Carrots are well-known to be good for eye health. Like egg yolks, carrots have vitamin A and also beta carotene. Vitamin A and beta carotene help the surface of the eye and can also help prevent eye infections and other serious eye conditions.
-Carrots are easy to eat on the go. Julianne whole carrots or keep a bag of baby carrots handy for an afternoon or evening snack. Toss them in salads and soups for some added nutrition, or shred them up and add them to muffin or pancake batter.
+												<p>Although egg yolks are very nutritious, they contain high amounts of phosphorus, making egg whites a better choice for people following a renal diet.
+Egg whites provide a high quality, kidney-friendly source of protein.
+Plus, they’re an excellent choice for people undergoing dialysis treatment, who have higher protein needs but need to limit phosphorus.
+Two large egg whites (66 grams) contain (30):
+•	sodium: 110 mg
+•	potassium: 108 mg
+•	phosphorus: 10 mg
 </p>
 												<p>
 													<a href="#" class="btn btn-default btn-transparent" role="button">
@@ -1372,12 +1397,18 @@ Carrots are easy to eat on the go. Julianne whole carrots or keep a bag of baby 
 							<div class="col-sm-6 col-md-4">
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/kale.jpg" alt="...">
-										<h3>KALE</h3>
+										<img src="images/healthy/olive oil.jpg" alt="...">
+										<h3>OLIVE OIL</h3>
 									</a>
 											<div class="caption">
-												<p>Kale is known as a superfood by many because it contains so many important vitamins, nutrients, and minerals. It’s extremely good for eye health. Kale has the antioxidants lutein and zeaxanthin, also found in eggs and other foods. These nutrients may help to prevent serious eye conditions such as age-related macular degeneration and cataracts. Lutein and zeaxanthin aren’t made in the body, so you have to incorporate them into your diet. A 100 gram serving of kale, which is about 1 ½ cups, contains 11.4 mg of lutein, and it’s recommended you get 10 mg per day. Other vegetables high in lutein are red peppers and spinach.
-Kale can be made into snack chips. First wash the leaves, then tear them into small pieces; toss it in olive oil, and bake it 20 minutes or so, until the kale gets crispy. You can season them with a light sprinkle of salt. You can also sauté kale for a side dish or serve it in a salad.
+												<p>Olive oil is a healthy source of fat and phosphorus-free, making it a great option for people with kidney disease.
+Frequently, people with advanced kidney disease have trouble keeping weight on, making healthy, high calorie foods like olive oil important.
+The majority of fat in olive oil is a monounsaturated fat called oleic acid, which has anti-inflammatory properties (34Trusted Source).
+What’s more, monounsaturated fats are stable at high temperatures, making olive oil a healthy choice for cooking.
+One tablespoon (13.5 grams) of olive oil contains (35):
+•	sodium: 0.3 mg
+•	potassium: 0.1 mg
+•	phosphorus: 0 mg
 </p>
 												<p>
 													<a href="#" class="btn btn-default btn-transparent" role="button">
