kidney food completed

--- a/healthyFood.html
+++ b/healthyFood.html
@@ -1803,24 +1803,18 @@ One tablespoon (13.5 grams) of olive oil contains (35):
 				<div class="col-md-12">
 					<div class="block">
 						<div class="block-heading">
-							<h2>FOOD FOR HEALTHY KIDNEY</h2>
+							<h2>FOOD FOR ACID REFLUX</h2>
 						</div>
 						<div class="row">
 
 								<div class="col-sm-6 col-md-4">
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/cauliflower.jpg" alt="...">
-										<h3>Cauliflower</h3>
+										<img src="images/healthy/vegetables.jpg" alt="...">
+										<h3>VEGETABLE</h3>
 									</a>
 											<div class="caption">
-												<p>Cauliflower is a nutritious vegetable that’s a good source of many nutrients, including vitamin C, vitamin K, and the B vitamin folate.
-It’s also full of anti-inflammatory compounds like indoles and is an excellent source of fiber.
-Plus, mashed cauliflower can be used in place of potatoes for a low potassium side dish.
-One cup (124 grams) of cooked cauliflower contains:
-•	sodium: 19 mg
-•	potassium: 176 mg
-•	phosphorus: 40 mg
+												<p>
 
 </p>
 												<p>
@@ -1838,17 +1832,11 @@ One cup (124 grams) of cooked cauliflower contains:
 								<div class="col-sm-6 col-md-4">
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/blueberries.jpg" alt="...">
-										<h3>BLUEBERRY</h3>
+										<img src="images/healthy/ginger.jpg" alt="...">
+										<h3>GINFER</h3>
 									</a>
 											<div class="caption">
-												<p>Blueberries are packed with nutrients and one of the best sources of antioxidants you can eat.
-In particular, these sweet berries contain antioxidants called anthocyanins, which may protect against heart disease, certain cancers, cognitive decline, and diabetes.
-They also make a fantastic addition to a kidney-friendly diet, as they are low in sodium, phosphorus, and potassium.
-One cup (148 grams) of fresh blueberries contains (21):
-•	sodium: 1.5 mg
-•	potassium: 114 mg
-•	phosphorus: 18 mg
+												<p>Ginger has natural anti-inflammatory properties, and it’s a natural treatment for heartburn and other gastrointestinal problems. You can add grated or sliced ginger root to recipes or smoothies or drink ginger tea to ease symptoms.
 </p>
 <p>
 													<a href="#" class="btn btn-default btn-transparent" role="button">
@@ -1865,19 +1853,11 @@ One cup (148 grams) of fresh blueberries contains (21):
 								<div class="col-sm-6 col-md-4">
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/sea bass.jpg" alt="...">
-										<h3>SEA BASS</h3>
+										<img src="images/healthy/oatmeal.jpg" alt="...">
+										<h3>OATMEAL/h3>
 									</a>
 											<div class="caption">
-												<p> Sea bass is a high quality protein that contains incredibly healthy fats called omega-3s.
-Omega-3s help reduce inflammation and may help decrease the risk of cognitive decline, depression, and anxiety.
-While all fish are high in phosphorus, sea bass contains lower amounts than other seafood.
-However, it’s important to consume small portions to keep your phosphorus levels in check.
-Three ounces (85 grams) of cooked sea bass contain:
-•	sodium: 74 mg
-•	potassium: 279 mg
-•	phosphorus: 211 mg
-
+												<p>Oatmeal is a breakfast favorite, a whole grain, and an excellent source of fiber. Oatmeal can absorb acid in the stomach and reduce symptoms of reflux. Other fiber options include whole-grain breads and whole-grain rice.
 </p>
 												<p>
 													<a href="#" class="btn btn-default btn-transparent" role="button">
@@ -1894,17 +1874,31 @@ Three ounces (85 grams) of cooked sea bass contain:
 							<div class="col-sm-6 col-md-4">
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/redgrapes.jpg" alt="...">
-										<h3>RED GRAPES</h3>
+										<img src="images/healthy/noncitrus fruits.jpg" alt="...">
+										<h3>NONCITRUS FRUITS</h3>
 									</a>
 											<div class="caption">
-												<p>Red grapes are not only delicious but also deliver a ton of nutrition in a small package.
-They’re high in vitamin C and contain antioxidants called flavonoids, which have been shown to reduce inflammation.
-Additionally, red grapes are high in resveratrol, a type of flavonoid that has been shown to benefit heart health and protect against diabetes and cognitive decline.
-These sweet fruits are kidney-friendly, with a half cup (75 grams) containing (29):
-•	sodium: 1.5 mg
-•	potassium: 144 mg
-•	phosphorus: 15 mg
+												<p>Noncitrus fruits, including melons, bananas, apples, and pears, are less likely to trigger reflux symptoms than acidic fruits.
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/lean meats and seafood.jpg" alt="...">
+										<h3>LEAN MEATS and SEAFOOD</h3>
+									</a>
+											<div class="caption">
+												<p>Lean meats, such as chicken, turkey, fish, and seafood, are low-fat and reduce symptoms of acid reflux. Try them grilled, broiled, baked, or poached.
 </p>
 												<p>
 													<a href="#" class="btn btn-default btn-transparent" role="button">
@@ -1921,43 +1915,10 @@ These sweet fruits are kidney-friendly, with a half cup (75 grams) containing (2
 									<div class="thumbnail">
 										<a class="catagotie-head" href="blog-single.html">
 										<img src="images/healthy/egg whites.jpg" alt="...">
-										<h3>EGG WHITES</h3>
+										<h3>EGG WHITE</h3>
 									</a>
 											<div class="caption">
-												<p>Although egg yolks are very nutritious, they contain high amounts of phosphorus, making egg whites a better choice for people following a renal diet.
-Egg whites provide a high quality, kidney-friendly source of protein.
-Plus, they’re an excellent choice for people undergoing dialysis treatment, who have higher protein needs but need to limit phosphorus.
-Two large egg whites (66 grams) contain (30):
-•	sodium: 110 mg
-•	potassium: 108 mg
-•	phosphorus: 10 mg
-</p>
-												<p>
-													<a href="#" class="btn btn-default btn-transparent" role="button">
-														<span>Like</span>
-													</a>
-													<a href="#" class="btn btn-default btn-transparent" role="button">
-														<span>Comment</span>
-													</a>
-													</p>
-											</div>	<!-- End of /.caption -->
-									</div>	<!-- End of /.thumbnail -->
-								</div>	<!-- End of /.col-sm-6 col-md-4 -->
-							<div class="col-sm-6 col-md-4">
-									<div class="thumbnail">
-										<a class="catagotie-head" href="blog-single.html">
-										<img src="images/healthy/olive oil.jpg" alt="...">
-										<h3>OLIVE OIL</h3>
-									</a>
-											<div class="caption">
-												<p>Olive oil is a healthy source of fat and phosphorus-free, making it a great option for people with kidney disease.
-Frequently, people with advanced kidney disease have trouble keeping weight on, making healthy, high calorie foods like olive oil important.
-The majority of fat in olive oil is a monounsaturated fat called oleic acid, which has anti-inflammatory properties (34Trusted Source).
-What’s more, monounsaturated fats are stable at high temperatures, making olive oil a healthy choice for cooking.
-One tablespoon (13.5 grams) of olive oil contains (35):
-•	sodium: 0.3 mg
-•	potassium: 0.1 mg
-•	phosphorus: 0 mg
+												<p>Egg whites are a good option. Stay away from egg yolks, though, which are high in fat and may trigger reflux symptoms.
 </p>
 												<p>
 													<a href="#" class="btn btn-default btn-transparent" role="button">
