--- a/main.html
+++ b/main.html
@@ -96,21 +96,15 @@
 		      		</div>
 			      	<div class="modal-body clearfix">
 
-						<form action="signup.php" method="post" id="create-account_form" class="std">
+						<form action="#" method="post" id="create-account_form" class="std">
 							<fieldset>
 								<h3>Create your account</h3>
 								<div class="form_content clearfix">
-									<h4>Enter your Username and Password to create an account.</h4>
+									<h4>Enter your e-mail address to create an account.</h4>
 									<p class="text">
-										<label for="email_create">USERNAME</label>
+										<label for="email_create">E-mail address</label>
 										<span>
-											<input placeholder="USERNAME"  type="text" id="email_create" name="username" value="" class="account_input">
-					                    </span>
-									</p>
-									<p class="text">
-										<label for="email_create">PASSWORD</label>
-										<span>
-											<input placeholder="PASSWORD"  type="password" id="email_create" name="password" value="" class="account_input">
+											<input placeholder="E-mail address"  type="text" id="email_create" name="email_create" value="" class="account_input">
 					                    </span>
 									</p>
 									<p class="submit">
@@ -119,17 +113,17 @@
 								</div>
 							</fieldset>
 						</form>
-			      		<form action="login.php" method="post" id="login_form" class="std">
+			      		<form action="" method="post" id="login_form" class="std">
 							<fieldset>
 								<h3>Already registered?</h3>
 								<div class="form_content clearfix">
 									<p class="text">
 									<label for="email">E-mail address</label>
-										<span><input placeholder="USERNAME" type="text" id="email" name="username" value="" class="account_input"></span>
+										<span><input placeholder="E-mail address" type="text" id="email" name="email" value="" class="account_input"></span>
 									</p>
 									<p class="text">
 									<label for="passwd">Password</label>
-										<span><input placeholder="Password" type="password" id="passwd" name="password" value="" class="account_input"></span>
+										<span><input placeholder="Password" type="password" id="passwd" name="passwd" value="" class="account_input"></span>
 									</p>
 									<p class="lost_password">
 										<a href="#popab-password-reset" class="popab-password-link">Forgot your password?</a>
@@ -174,22 +168,24 @@
 
 	<nav class="navbar navbar-default">
 		<div class="container">
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
-		    </div> <!-- End of /.navbar-header -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div> <!-- End of /.navbar-header -->
 
-		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		      	<ul class="nav navbar-nav nav-main">
-		        	<li class="active"><a href="#">HOME</a></li>
-					<li><a data-toggle="modal" data-target="#myModal" href="#">LOGIN</a></li>
-					<li><a href="#">ABOUT</a></li>
-		        </ul> <!-- End of /.nav-main -->
-		    </div>	<!-- /.navbar-collapse -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav nav-main">
+							<li class="active"><a href="#">HOME</a></li>
+					<li><a href="#">FORUM</a></li>
+					<li><a href="#">BMI</a></li>
+					<li><a href="healthyFood.html">HEALTHY FOOD</a></li>
+          <li><a href="#">ABOUT</a></li>
+						</ul> <!-- End of /.nav-main -->
+				</div>	<!-- /.navbar-collapse -->
 		</div>	<!-- /.container-fluid -->
 	</nav>	<!-- End of /.nav -->
 
