--- a/healthyFood.html
+++ b/healthyFood.html
@@ -283,8 +283,7 @@
 										<h3>EGG</h3>
 									</a>
 							      	<div class="caption">
-							        	<p> Eggs are among the most nutritious foods on the planet.
-They were previously demonized for being high in cholesterol, but new studies show that they’re perfectly safe and healthy.</p>
+							        	<p> Eggs are among the most nutritious foods on the planet. <a href="egg.html">Read More</a></p>
 							        	<p>
 							        		<a href="#" class="btn btn-default btn-transparent" role="button">
 							        			<span>Like</span>
@@ -304,7 +303,7 @@ They were previously demonized for being high in cholesterol, but new studies s
 										<h3>MEAT</h3>
 									</a>
 							      	<div class="caption">
-							        	<p> Unprocessed, gently cooked meat is one of the most nutritious foods you can eat.</p>
+							        	<p> Unprocessed, gently cooked meat is one of the most nutritious foods you can eat.<a href="meat.html">Read More</a></p>
 							        	<p>
 							        		<a href="#" class="btn btn-default btn-transparent" role="button">
 							        			<span>Like</span>
@@ -324,8 +323,7 @@ They were previously demonized for being high in cholesterol, but new studies s
 										<h3>Fruits and Berries</h3>
 									</a>
 							      	<div class="caption">
-							        	<p> Fruits and berries are among the world’s most popular health foods.
- These sweet, nutritious foods are very easy to incorporate into your diet because they require little to no preparation.</p>
+							        	<p> Fruits and berries are among the world’s most popular health foods.<a href="fruitsAndBerries.html">Read More</a></p>
 							        	<p>
 							        		<a href="#" class="btn btn-default btn-transparent" role="button">
 							        			<span>Like</span>
@@ -344,9 +342,7 @@ They were previously demonized for being high in cholesterol, but new studies s
 										<h3>NUTS and SEADS</h3>
 									</a>
 							      	<div class="caption">
-							        	<p> Despite being high in fat and calories, nuts and seeds may help you lose weight.
-These foods are crunchy, filling, and loaded with important nutrients that many people don't get enough of, including magnesium and vitamin E.
-They also require almost no preparation, so they’re easy to add to your routine.</p>
+							        	<p> Despite being high in fat and calories, nuts and seeds may help you lose weight.<a href="nutsAndSeads.html">Read More</a></p>
 							        	<p>
 							        		<a href="#" class="btn btn-default btn-transparent" role="button">
 							        			<span>Like</span>
@@ -366,8 +362,7 @@ They also require almost no preparation, so they’re easy to add to your routin
 										<h3>VEGETABLES</h3>
 									</a>
 							      	<div class="caption">
-							        	<p> Calorie for calorie, vegetables are among the world’s most concentrated sources of nutrients.
-There’s a wide variety available, and it’s best to eat many different types every day.</p>
+							        	<p> Calorie for calorie, vegetables are among the world’s most concentrated sources of nutrients.<a href="vegetables.html">Read More</a></p>
 							        	<p>
 							        		<a href="#" class="btn btn-default btn-transparent" role="button">
 							        			<span>Like</span>
@@ -386,9 +381,7 @@ There’s a wide variety available, and it’s best to eat many different types 
 										<h3>FISH and SEAFOOD</h3>
 									</a>
 							      	<div class="caption">
-							        	<p> Fish and other seafood tend to be very healthy and nutritious.
-They’re especially rich in omega-3 fatty acids and iodine, two nutrients in which most people are deficient.
-Studies show that people who eat the highest amounts of seafood — especially fish — tend to live longer and have a lower risk of many illnesses, including heart disease, dementia, and depression.</p>
+							        	<p> Fish and other seafood tend to be very healthy and nutritious.<a href="fishAndSeafood.html">Read More</a></p>
 							        	<p>
 							        		<a href="#" class="btn btn-default btn-transparent" role="button">
 							        			<span>Like</span>
