--- a/nutsAndSeads.html
+++ b/nutsAndSeads.html
@@ -212,7 +212,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<h1>Products Details</h1>
+					<h1>Food Details</h1>
 					<p></p>
 				</div>	<!-- /.col-md-4 -->
 				<div class="col-md-8 hidden-xs">
@@ -241,10 +241,11 @@
 				<div class="col-md-4">
 					<div class="block">
 						<div class="product-des">
-							<h4>Claritas est etiam</h4>
-							<p class="price">$380</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, culpa, esse, magni omnis blanditiis unde vitae in nobis fuga optio numquam at ipsum impedit perspiciatis quia rem consequatur recusandae repudiandae provident nemo voluptatibus corporis ab id iste pariatur ipsam vero porro eos eaque rerum nam dolorum mollitia adipisci. Quaerat, ullam!</p>
-							<a class="view-link" href="#"><i class="fa fa-plus-circle"></i>Add To Cart</a>
+							<h4>Nuts And Seads</h4>
+							<p>Despite being high in fat and calories, nuts and seeds may help you lose weight.
+These foods are crunchy, filling, and loaded with important nutrients that many people don't get enough of, including magnesium and vitamin E.
+They also require almost no preparation, so they’re easy to add to your routine.</p>
+
 						</div>	<!-- End of /.product-des -->
 					</div> <!-- End of /.block -->
 				</div>	<!-- End of /.col-md-4 -->
@@ -306,7 +307,7 @@
 				<div class="col-md-9">
 					<!-- Nav tabs -->
 					<ul class="nav nav-tabs">
-						<li class="active"><a href="#home" data-toggle="tab">More Info</a></li>
+						<li class="active"><a href="#home" data-toggle="tab">Like</a></li>
 						<li><a href="#profile" data-toggle="tab">Comments</a></li>
 					</ul>
 
@@ -330,39 +331,6 @@
 			</div>	<!-- End of /.row -->
 		</div>	<!-- End of /.Container -->
 	</section> <!-- End of /.Single-product -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	<!-- FOOTER Start
     ================================================== -->
 
