food for good health read more done

--- a/avocados.html
+++ b/avocados.html
@@ -242,13 +242,7 @@
 					<div class="block">
 						<div class="product-des">
 							<h4>EGG</h4>
-							<p>Applying egg yolk topically to your scalp can infuse the root of your hair with vitamins. This means that the new hair will grow out stronger and be less prone to breakage and shedding. When your hair doesn't fall out as much, it becomes fuller.
-To use: For normal hair, use the entire egg to condition hair; use egg whites only to treat oily hair; use egg yolks only to moisturize dry, brittle hair, Cox says. ... Leave on for 20 minutes, rinse with cool water. and shampoo hair. Eggs are a great source of protein and biotin, two nutrients that may promote hair growth.
-Eating adequate protein is important for hair growth because hair follicles are made of mostly protein. A lack of protein in the diet has been shown to promote hair loss.
-Biotin is essential for the production of a hair protein called keratin, which is why biotin supplements are often marketed for hair growth. Research has also shown that consuming more biotin can help improve hair growth in people with a biotin deficiency.
-However, biotin deficiencies are uncommon if you consume a balanced diet. There is little evidence to show healthy people benefit from consuming more biotin.
-Eggs are also a great source of zinc, selenium and other hair-healthy nutrients. This makes them one of the best foods to consume for optimal hair health..</p>
-
+							<p>Avocados are delicious, nutritious and a great source of healthy fats. They are also an excellent source of vitamin E, which may promote hair growth. One medium avocado (about 200 grams) provides 21% of your daily vitamin E needs. Like vitamin C, vitamin E is an antioxidant that helps combat oxidative stress by neutralizing free radicals. In one study, people with hair loss experienced 34.5% more hair growth after taking a vitamin E supplement for eight months. Vitamin E also protects areas of the skin, like the scalp, from oxidative stress and damage. Damaged skin on the scalp can result in poor hair quality and fewer hair follicles. What’s more, avocados are a great source of essential fatty acids. These fats cannot be produced by the body, but are essential building blocks of your cells. A deficiency in essential fatty acids has been linked to hair loss. SUMMARY Avocados are rich in vitamin E, an antioxidant that may promote hair growth. Additionally, they are a great source of essential fatty acids, which appear to be crucial for hair growth. </p>
 						</div>	<!-- End of /.product-des -->
 					</div> <!-- End of /.block -->
 				</div>	<!-- End of /.col-md-4 -->
