--- a/berries.html
+++ b/berries.html
@@ -241,13 +241,15 @@
 				<div class="col-md-4">
 					<div class="block">
 						<div class="product-des">
-							<h4>EGG</h4>
-							<p>Applying egg yolk topically to your scalp can infuse the root of your hair with vitamins. This means that the new hair will grow out stronger and be less prone to breakage and shedding. When your hair doesn't fall out as much, it becomes fuller.
-To use: For normal hair, use the entire egg to condition hair; use egg whites only to treat oily hair; use egg yolks only to moisturize dry, brittle hair, Cox says. ... Leave on for 20 minutes, rinse with cool water. and shampoo hair. Eggs are a great source of protein and biotin, two nutrients that may promote hair growth.
-Eating adequate protein is important for hair growth because hair follicles are made of mostly protein. A lack of protein in the diet has been shown to promote hair loss.
-Biotin is essential for the production of a hair protein called keratin, which is why biotin supplements are often marketed for hair growth. Research has also shown that consuming more biotin can help improve hair growth in people with a biotin deficiency.
-However, biotin deficiencies are uncommon if you consume a balanced diet. There is little evidence to show healthy people benefit from consuming more biotin.
-Eggs are also a great source of zinc, selenium and other hair-healthy nutrients. This makes them one of the best foods to consume for optimal hair health..</p>
+							<h4>Berries</h4>
+							<p>Berries are loaded with beneficial compounds and vitamins that may promote hair growth.
+This includes vitamin C, which has strong antioxidant properties.
+Antioxidants can help protect hair follicles against damage from harmful molecules called free radicals. These molecules exist naturally in the body and the environment.
+For example, 1 cup (144 grams) of strawberries provides an impressive 141% of your daily vitamin C needs.
+Also, the body uses vitamin C to produce collagen, a protein that helps strengthen hair to prevent it from becoming brittle and breaking.
+What’s more, vitamin C helps the body absorb iron from the diet. Low iron levels may cause anemia, which has been linked to hair loss.
+SUMMARY Berries are loaded with compounds like antioxidants and vitamins that may promote hair growth. For example, strawberries are rich in vitamin C, which aids
+collagen production and iron absorption, two factors that may promote hair growth.</p>
 
 						</div>	<!-- End of /.product-des -->
 					</div> <!-- End of /.block -->
