--- a/sweatPotato.html
+++ b/sweatPotato.html
@@ -241,13 +241,12 @@
 				<div class="col-md-4">
 					<div class="block">
 						<div class="product-des">
-							<h4>EGG</h4>
-							<p>Applying egg yolk topically to your scalp can infuse the root of your hair with vitamins. This means that the new hair will grow out stronger and be less prone to breakage and shedding. When your hair doesn't fall out as much, it becomes fuller.
-To use: For normal hair, use the entire egg to condition hair; use egg whites only to treat oily hair; use egg yolks only to moisturize dry, brittle hair, Cox says. ... Leave on for 20 minutes, rinse with cool water. and shampoo hair. Eggs are a great source of protein and biotin, two nutrients that may promote hair growth.
-Eating adequate protein is important for hair growth because hair follicles are made of mostly protein. A lack of protein in the diet has been shown to promote hair loss.
-Biotin is essential for the production of a hair protein called keratin, which is why biotin supplements are often marketed for hair growth. Research has also shown that consuming more biotin can help improve hair growth in people with a biotin deficiency.
-However, biotin deficiencies are uncommon if you consume a balanced diet. There is little evidence to show healthy people benefit from consuming more biotin.
-Eggs are also a great source of zinc, selenium and other hair-healthy nutrients. This makes them one of the best foods to consume for optimal hair health..</p>
+							<h4>Sweet Potato</h4>
+							<p>Sweet potatoes are a great source of beta-carotene. The body converts this compound into vitamin A, which is linked to good hair health.
+A medium sweet potato (about 114 grams) contains enough beta-carotene to provide more than four times your daily vitamin A needs.
+Research has shown that vitamin A promotes the production of sebum, which helps keep hair healthy.
+What’s more, vitamin A could also speed up the rate of hair growth and encourage the growth of thicker hair, all while preventing other hair follicles from regressing.
+SUMMARY Sweet potatoes are loaded with vitamin A, which helps aid sebum production. Additionally, it has other factors that may help speed up the rate of hair growth.</p>
 
 						</div>	<!-- End of /.product-des -->
 					</div> <!-- End of /.block -->
