--- a/sweetPaper.html
+++ b/sweetPaper.html
@@ -241,14 +241,15 @@
 				<div class="col-md-4">
 					<div class="block">
 						<div class="product-des">
-							<h4>EGG</h4>
-							<p>Applying egg yolk topically to your scalp can infuse the root of your hair with vitamins. This means that the new hair will grow out stronger and be less prone to breakage and shedding. When your hair doesn't fall out as much, it becomes fuller.
-To use: For normal hair, use the entire egg to condition hair; use egg whites only to treat oily hair; use egg yolks only to moisturize dry, brittle hair, Cox says. ... Leave on for 20 minutes, rinse with cool water. and shampoo hair. Eggs are a great source of protein and biotin, two nutrients that may promote hair growth.
-Eating adequate protein is important for hair growth because hair follicles are made of mostly protein. A lack of protein in the diet has been shown to promote hair loss.
-Biotin is essential for the production of a hair protein called keratin, which is why biotin supplements are often marketed for hair growth. Research has also shown that consuming more biotin can help improve hair growth in people with a biotin deficiency.
-However, biotin deficiencies are uncommon if you consume a balanced diet. There is little evidence to show healthy people benefit from consuming more biotin.
-Eggs are also a great source of zinc, selenium and other hair-healthy nutrients. This makes them one of the best foods to consume for optimal hair health..</p>
-
+							<h4>Sweet Paper</h4>
+							<p>Sweet peppers are an excellent source of vitamin C, which may aid hair growth.
+In fact, one yellow pepper provides nearly 5.5 times as much vitamin C as an orange.
+Vitamin C helps promote collagen production, which can help strengthen your hair strands. It’s also a strong antioxidant, which can protect hair strands against oxidative stress.
+Oxidative stress occurs when free radicals overwhelm the body’s antioxidant defense system. It has been linked to hair loss and the graying of hair.
+What’s more, sweet peppers are also an excellent source of vitamin A.
+This vitamin may help speed up hair growth while stimulating the production of sebum, which helps keep hair healthy.
+SUMMARY Sweet peppers are a rich source of vitamins A and C, two nutrients that help ensure hair stays healthy and that may aid hair
+growth.</p>
 						</div>	<!-- End of /.product-des -->
 					</div> <!-- End of /.block -->
 				</div>	<!-- End of /.col-md-4 -->
