--- a/healthyFood.html
+++ b/healthyFood.html
@@ -426,7 +426,8 @@ Antioxidants can help protect hair follicles against damage from harmful molecul
 For example, 1 cup (144 grams) of strawberries provides an impressive 141% of your daily vitamin C needs.
 Also, the body uses vitamin C to produce collagen, a protein that helps strengthen hair to prevent it from becoming brittle and breaking.
 What’s more, vitamin C helps the body absorb iron from the diet. Low iron levels may cause anemia, which has been linked to hair loss.
-SUMMARY Berries are loaded with compounds like antioxidants and vitamins that may promote hair growth. For example, strawberries are rich in vitamin C, which aids collagen production and iron absorption, two factors that may promote hair growth.</p>
+SUMMARY Berries are loaded with compounds like antioxidants and vitamins that may promote hair growth. For example, strawberries are rich in vitamin C, which aids
+collagen production and iron absorption, two factors that may promote hair growth.</p>
 							        	<p>
 							        		<a href="#" class="btn btn-default btn-transparent" role="button">
 							        			<span>Like</span>
@@ -502,7 +503,8 @@ For example, an ounce (28 grams) of almonds provides an impressive 37% of your d
 What’s more, they also provide a wide variety of B vitamins, zinc and essential fatty acids. A deficiency in any of these nutrients has been linked to hair loss.
 Nuts have also been linked to a wide variety of other health benefits besides hair growth, including reduced inflammation and a lower risk of heart disease.
 This makes nuts an excellent and easy addition to your diet.
-SUMMARY Nuts are packed with nutrients like vitamin E, B vitamins, zinc and essential fatty acids, all of which may promote hair growth and are linked to many other health benefits.</p>
+SUMMARY Nuts are packed with nutrients like vitamin E, B vitamins, zinc and essential fatty acids, all of which may promote hair growth
+and are linked to many other health benefits.</p>
 							        	<p>
 							        		<a href="#" class="btn btn-default btn-transparent" role="button">
 							        			<span>Like</span>
@@ -527,7 +529,8 @@ Vitamin C helps promote collagen production, which can help strengthen your hair
 Oxidative stress occurs when free radicals overwhelm the body’s antioxidant defense system. It has been linked to hair loss and the graying of hair.
 What’s more, sweet peppers are also an excellent source of vitamin A.
 This vitamin may help speed up hair growth while stimulating the production of sebum, which helps keep hair healthy.
-SUMMARY Sweet peppers are a rich source of vitamins A and C, two nutrients that help ensure hair stays healthy and that may aid hair growth.</p>
+SUMMARY Sweet peppers are a rich source of vitamins A and C, two nutrients that help ensure hair stays healthy and that may aid hair
+growth.</p>
 							        	<p>
 							        		<a href="#" class="btn btn-default btn-transparent" role="button">
 							        			<span>Like</span>
