--- a/nut.html
+++ b/nut.html
@@ -241,13 +241,14 @@
 				<div class="col-md-4">
 					<div class="block">
 						<div class="product-des">
-							<h4>EGG</h4>
-							<p>Applying egg yolk topically to your scalp can infuse the root of your hair with vitamins. This means that the new hair will grow out stronger and be less prone to breakage and shedding. When your hair doesn't fall out as much, it becomes fuller.
-To use: For normal hair, use the entire egg to condition hair; use egg whites only to treat oily hair; use egg yolks only to moisturize dry, brittle hair, Cox says. ... Leave on for 20 minutes, rinse with cool water. and shampoo hair. Eggs are a great source of protein and biotin, two nutrients that may promote hair growth.
-Eating adequate protein is important for hair growth because hair follicles are made of mostly protein. A lack of protein in the diet has been shown to promote hair loss.
-Biotin is essential for the production of a hair protein called keratin, which is why biotin supplements are often marketed for hair growth. Research has also shown that consuming more biotin can help improve hair growth in people with a biotin deficiency.
-However, biotin deficiencies are uncommon if you consume a balanced diet. There is little evidence to show healthy people benefit from consuming more biotin.
-Eggs are also a great source of zinc, selenium and other hair-healthy nutrients. This makes them one of the best foods to consume for optimal hair health..</p>
+							<h4>Nut</h4>
+							<p>Nuts are tasty, convenient and contain a variety of nutrients that may promote hair growth.
+For example, an ounce (28 grams) of almonds provides an impressive 37% of your daily vitamin E needs.
+What’s more, they also provide a wide variety of B vitamins, zinc and essential fatty acids. A deficiency in any of these nutrients has been linked to hair loss.
+Nuts have also been linked to a wide variety of other health benefits besides hair growth, including reduced inflammation and a lower risk of heart disease.
+This makes nuts an excellent and easy addition to your diet.
+SUMMARY Nuts are packed with nutrients like vitamin E, B vitamins, zinc and essential fatty acids, all of which may promote hair growth
+and are linked to many other health benefits.</p>
 
 						</div>	<!-- End of /.product-des -->
 					</div> <!-- End of /.block -->
