--- a/healthyFood.html
+++ b/healthyFood.html
@@ -603,7 +603,8 @@ The caffeine in coffee has a number of positive effects on the brain, includin
     • Sharpened concentration: One study found that when participants drank one large coffee in the morning or smaller amounts throughout the day, they were more effective at tasks that required concentration.
 Drinking coffee over the long term is also linked to a reduced risk of neurological diseases, such as Parkinson's and Alzheimer's.
 This could at least be partly due to coffee's high concentration of antioxidants.
-SUMMARY: Coffee can help boost alertness and mood. It may also offer some protection against Alzheimer's, thanks to its caffeine and antioxidants.</p>
+SUMMARY: Coffee can help boost alertness and mood. It may also offer some protection against Alzheimer's, thanks to its caffeine and
+antioxidants.</p>
 							        	<p>
 							        		<a href="#" class="btn btn-default btn-transparent" role="button">
 							        			<span>Like</span>
