--- a/main.html
+++ b/main.html
@@ -181,7 +181,7 @@
 						<ul class="nav navbar-nav nav-main">
 							<li class="active"><a href="#">HOME</a></li>
 					<li><a href="#">FORUM</a></li>
-					<li><a href="#">BMI</a></li>
+					<li><a href="bmi.php">BMI</a></li>
 					<li><a href="healthyFood.html">HEALTHY FOOD</a></li>
           <li><a href="#">ABOUT</a></li>
 						</ul> <!-- End of /.nav-main -->
